--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "moment": "^2.10.6",
-    "nano": "^6.1.5"
+    "nano": "^6.1.5",
+    "nunjucks": "^2.2.0"
   }
 }
